<resources>
    <string name="app_name">CriminalIntention</string>
    <string name="crime_title_hint">Enter a title of crime</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_detail_lable">Detail</string>
    <string name="crime_solve_lable">solved</string>
    <string name="date_picker_title">Pick Date</string>
    <string name="time_picker_title">Pick Time</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="show_test1">test1</string>

    <plurals name="subtitle_format">
        <item quantity="one"> %d Crime</item>
        <item quantity="other"> %d Crimes</item>
    </plurals>

    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_crime">Delete</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_crime_report">Send Crime Report</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_with_suspect">The suspect is %s</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>

    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_crime_suspect">Call Suspect</string>
    <string name="visible_text">You have no list, Please click the button to add the list :)</string>
    <string name="denied_permission_to_call">Permission Denied</string>
    <string name="image_title">Image</string>
</resources>
